[package]
name = "arceos-display"
version = "0.1.0"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../ulib/libax", features = ["display"], optional = true, package = "libax" }
embedded-graphics = "0.8"
