[package]
name = "libax"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user library with an interface similar to rust std"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/ulib/libax"
documentation = "https://rcore-os.github.io/arceos/libax/index.html"

[features]
default = []

# Multicore
smp = ["axfeat/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd"]

# Interrupts
irq = ["axfeat/irq"]

# Memory
alloc = ["dep:axalloc", "axfeat/alloc", "axio/alloc"]
paging = ["axfeat/paging"]

# Multi-threading and scheduler
multitask = ["alloc", "axtask/multitask", "axsync/multitask", "axfeat/multitask"]
sched_fifo = ["axfeat/sched_fifo"]
sched_rr = ["axfeat/sched_rr"]
sched_cfs = ["axfeat/sched_cfs"]

# File system
fs = ["dep:axfs", "axfeat/fs", "fd"]
use-ramdisk = ["axfeat/use-ramdisk"]

# Networking
net = ["alloc", "dep:axnet", "axfeat/net", "fd"]

# Display
display = ["alloc", "dep:axdisplay", "axfeat/display"]

# Device drivers
bus-mmio = ["axfeat/bus-mmio"]
bus-pci = ["axfeat/bus-pci"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

# Platform
platform-pc-x86 = ["axfeat/platform-pc-x86"]
platform-qemu-virt-riscv = ["axfeat/platform-qemu-virt-riscv"]
platform-qemu-virt-aarch64 = ["axfeat/platform-qemu-virt-aarch64"]
platform-raspi4-aarch64 = ["axfeat/platform-raspi4-aarch64"]

# For C bindings
cbindings = ["cbindgen", "bindgen", "dep:spin", "dep:lazy_static", "dep:flatten_objects", "dep:axconfig"]
fd = ["alloc"]
pipe = ["fd"]
select = ["fd"]
epoll = ["fd"]

[dependencies]
# ArceOS modules
axfeat = { path = "../../api/axfeat" }
axruntime = { path = "../../modules/axruntime" }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
axconfig = { path = "../../modules/axconfig" }
axalloc = { path = "../../modules/axalloc", optional = true }
axfs = { path = "../../modules/axfs", optional = true }
axnet = { path = "../../modules/axnet", optional = true }
axdisplay = { path = "../../modules/axdisplay", optional = true }
axsync = { path = "../../modules/axsync", optional = true }
axtask = { path = "../../modules/axtask", optional = true }

# Other crates
axio = { path = "../../crates/axio" }
axerrno = { path = "../../crates/axerrno" }
spinlock = { path = "../../crates/spinlock" }
static_assertions = "1.1.0"
spin = { version = "0.9", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"], optional = true }
flatten_objects = { path = "../../crates/flatten_objects", optional = true }

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
bindgen ={ version = "0.66", optional = true }
axconfig = { path = "../../modules/axconfig", optional = true }
