[package]
name = "std-parallel"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["libax/default"]
#sched_rr = ["libax/sched_rr"]
#sched_cfs = ["libax/sched_cfs"]

[dependencies]
