[package]
name = "std-priority"
version = "0.1.0"
edition = "2021"
authors = ["Haoxing Ye <yehx20@mails.tsinghua.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]

[package.metadata.arceos.features]
default = ["multitask"]
